[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Pitch.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player1.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Level.gd" type="Script" id=6]
[ext_resource path="res://src/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sfx/catch-me.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/air-horn.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/SpotLight.gd" type="Script" id=10]
[ext_resource path="res://src/DirectionalLight.gd" type="Script" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 11, 1, 0.25 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.054902, 0.227451, 0.886275, 1 )

[node name="Level" type="Spatial"]
script = ExtResource( 6 )

[node name="SFX" type="Node" parent="."]

[node name="BGMusic" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
volume_db = -15.0
autoplay = true

[node name="AirhornSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 9 )
volume_db = -12.0

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="Lights" type="Node" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="Lights" groups=[
"lights",
]]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 6, 0 )
shadow_enabled = true
script = ExtResource( 11 )

[node name="SpotLight" type="SpotLight" parent="Lights" groups=[
"lights",
]]
transform = Transform( 1, 0, 0, 0, 2.98023e-08, 1, 0, -1, 2.98023e-08, 0, 9, 0 )
visible = false
light_energy = 5.0
shadow_enabled = true
spot_range = 20.0
spot_angle = 20.0
script = ExtResource( 10 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939692, 0.34202, 0, -0.34202, 0.939692, 0.092, 5, 13 )
visible = false
current = true

[node name="Pitch" parent="." instance=ExtResource( 1 )]

[node name="Walls" type="Node" parent="."]

[node name="WallBack" type="StaticBody" parent="Walls"]
transform = Transform( 1.1, 0, 0, 0, 4, 0, 0, 0, 1, 0, 4, -8.2 )
visible = false
collision_layer = 2
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallBack"]
shape = SubResource( 1 )

[node name="WallBackBall" type="StaticBody" parent="Walls"]
transform = Transform( 1.1, 0, 0, 0, 4, 0, 0, 0, 1, 0, 4, -7.2 )
visible = false
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallBackBall"]
shape = SubResource( 1 )

[node name="WallFront" type="StaticBody" parent="Walls"]
transform = Transform( 1.1, 0, 0, 0, 4, 0, 0, 0, 1, 0, 4, 8.2 )
visible = false
collision_layer = 2
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallFront"]
shape = SubResource( 1 )

[node name="WallFrontBall" type="StaticBody" parent="Walls"]
transform = Transform( 1.1, 0, 0, 0, 4, 0, 0, 0, 1, 0, 4, 7.2 )
visible = false
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallFrontBall"]
shape = SubResource( 1 )

[node name="WallLeft" type="StaticBody" parent="Walls"]
transform = Transform( -2.25704e-07, 0, 1, 0, 4, 0, -0.8, 0, -2.8213e-07, -11, 4, 0 )
visible = false
collision_layer = 2
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallLeft"]
shape = SubResource( 1 )

[node name="WallRight" type="StaticBody" parent="Walls"]
transform = Transform( -2.25704e-07, 0, 1, 0, 4, 0, -0.8, 0, -2.8213e-07, 11, 4, 0 )
visible = false
collision_layer = 2
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Walls/WallRight"]
shape = SubResource( 1 )

[node name="Goals" type="Node" parent="."]

[node name="Goal1" parent="Goals" instance=ExtResource( 5 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -7.56349, 0, 0 )

[node name="Goal2" parent="Goals" instance=ExtResource( 5 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 7.48539, 0, 0 )

[node name="Goal" parent="Goals/Goal2" index="0"]
material/0 = SubResource( 2 )

[node name="SpawnPos" type="Node" parent="."]

[node name="SpawnBall" type="Position3D" parent="SpawnPos"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="SpawnPlayer1" type="Position3D" parent="SpawnPos"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )

[node name="SpawnPlayer2" type="Position3D" parent="SpawnPos"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )

[node name="Players" type="Node" parent="."]

[node name="Player1" parent="Players" groups=[
"players",
] instance=ExtResource( 3 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -5, 0, 0 )
collision_mask = 1

[node name="Player2" parent="Players" groups=[
"players",
] instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 5, 0, 0 )
collision_mask = 1
player_id = 2

[node name="Ball" parent="." groups=[
"ball",
] instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.8
one_shot = true
[connection signal="body_entered" from="Goals/Goal1/GoalDetector" to="." method="_on_GoalDetector_body_entered" binds= [ 2 ]]
[connection signal="body_entered" from="Goals/Goal2/GoalDetector" to="." method="_on_GoalDetector_body_entered" binds= [ 1 ]]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Goals/Goal1"]

[editable path="Goals/Goal2"]
